--- a/InsertCode.htm
+++ b/InsertCode.htm
@@ -143,7 +143,7 @@
         	//objDoc.body.innerHTML  // 这是html代码
         	
         	var sec = objDoc.selection.createRange();
-        	var html = formatDokuwikiStyleCode(insertText.value.replace(/\n/g,"<br>"));
+        	var html = formatDokuwikiStyleCode(insertText.value.replace(/\n/g,"<br>").replace(/&/g,"&amp;").replace(/</g,"&lt;").replace(/>/g,"&gt;")); //.replace(/"/g,"&quot;")
         	
         	sec.pasteHTML(html);
         }
