change overflow-x/y to visible.

--- a/InsertCode.htm
+++ b/InsertCode.htm
@@ -133,7 +133,7 @@
         
         function formatDokuwikiStyleCode(str)
         {
-        	return "<PRE style=\"BACKGROUND-IMAGE: none; BORDER-BOTTOM: rgb(204,204,204) thin dotted; BORDER-LEFT: rgb(204,204,204) thin dotted; PADDING-BOTTOM: 0.4ex; LINE-HEIGHT: 1.33; OVERFLOW-X: auto; OVERFLOW-Y: auto; BACKGROUND-COLOR: rgb(247,249,250); TEXT-INDENT: 0px; MARGIN: 1ex 0px; PADDING-LEFT: 0.4ex; PADDING-RIGHT: 0.4ex; MAX-WIDTH: 99%; COLOR: rgb(0,0,0); MAX-HEIGHT: 40em; FONT-SIZE: 12px; BORDER-TOP: rgb(204,204,204) thin dotted; BORDER-RIGHT: rgb(204,204,204) thin dotted; PADDING-TOP: 0.4ex; -webkit-background-clip: initial; -webkit-background-origin: initial\" class=code>"
+        	return "<PRE style=\"BACKGROUND-IMAGE: none; BORDER-BOTTOM: rgb(204,204,204) thin dotted; BORDER-LEFT: rgb(204,204,204) thin dotted; PADDING-BOTTOM: 0.4ex; LINE-HEIGHT: 1.33; OVERFLOW-X: visible; OVERFLOW-Y: visible; BACKGROUND-COLOR: rgb(247,249,250); TEXT-INDENT: 0px; MARGIN: 1ex 0px; PADDING-LEFT: 0.4ex; PADDING-RIGHT: 0.4ex; MAX-WIDTH: 99%; COLOR: rgb(0,0,0); MAX-HEIGHT: 40em; FONT-SIZE: 12px; BORDER-TOP: rgb(204,204,204) thin dotted; BORDER-RIGHT: rgb(204,204,204) thin dotted; PADDING-TOP: 0.4ex; -webkit-background-clip: initial; -webkit-background-origin: initial\" class=code>"
         	+str+"</PRE>";
         }
         
