--- a/WizSheet/wizsheet.htm
+++ b/WizSheet/wizsheet.htm
@@ -90,7 +90,7 @@
                     + template_path + "jquery.sheet/plugins/jquery.sheet.financefn.js\"><\/script><script src=\""
                     + template_path + "jquery.sheet/plugins/jquery.sheet.dts.js\"><\/script><script src=\""
                     + template_path + "jquery.sheet/plugins/ZeroClipboard.js\"><\/script>"
-                    + "<script type=\"text/javascript\"> $(function() { $('#sheetParent').width(2000).height(2000).sheet(); });<\/script>"
+                    + "<script type=\"text/javascript\"> $(function() { $('#sheetParent').width(2000).height(2000).sheet(); $.each($('table#jS_0_0 tr'), function(i){if(i == 1){this.style.display = 'none';}}); });<\/script>"
                     + "<meta http-equiv='Content-Type' content='text/html; charset=utf-8'><title>"
                     + title + "</title>" + htmltext + "<!--WizHtmlContentEnd--></body></html>";
 
