--- a/WizSheet/wizsheet.htm
+++ b/WizSheet/wizsheet.htm
@@ -15,16 +15,13 @@
         $(function() {
             $('#sheetParent').height($(window).height() - 50).sheet();
         });
-        //$('#sheetContent').toPrettySource();
 
         function save() {      // for debuging
-            x = document.getElementById("sheetParent") //查找元素
             y = document.getElementById("sheetContent");
 
-            var htmltext = x.innerHTML;
             //var htmltext =document.all[0].innerHTML;
-            //htmltext = $("table#jS_0_0").get(0).outerHTML;
-            htmltext = $("#sheetParent").get(0).outerHTML;
+            //var htmltext = $("table#jS_0_0").get(0).outerHTML;
+            var htmltext = $("#sheetParent").get(0).outerHTML;   //include sheetParent div node
             y.innerText = htmltext; //改变内容
         }
 
@@ -38,19 +35,6 @@
             return objApp.LoadStringFromFile(languageFileName, name);
         }
 
-        function formatInt(val) {
-            if (val < 10) return "0" + val;
-            else return "" + val;
-        }
-        String.prototype.trim = function() {
-            return this.replace(/^\s+|\s+$/g, "");
-        }
-        String.prototype.ltrim = function() {
-            return this.replace(/^\s+/, "");
-        }
-        String.prototype.rtrim = function() {
-            return this.replace(/\s+$/, "");
-        }
         function saveToWiz() {
             try {
                 saveToWizCore();
@@ -63,8 +47,6 @@
         }
 
         function saveToWizCore() {
-            //var htmltext = $("#sheetParent").get(0).outerHTML;  //include sheetParent div node
-
             var htmltext = $("table#jS_0_0").get(0).outerHTML;
             htmltext = "<\/head><body><div id=\"sheetParent\">" + htmltext + "<\/div>";
 
@@ -90,11 +72,13 @@
                     + template_path + "jquery.sheet/plugins/jquery.sheet.financefn.min.js\"><\/script><script src=\""
                     + template_path + "jquery.sheet/plugins/jquery.sheet.dts.min.js\"><\/script><script src=\""
                     + template_path + "jquery.sheet/plugins/ZeroClipboard.min.js\"><\/script>"
-                    + "<script type=\"text/javascript\"> $(function() { var isWindows = (navigator.platform == 'Win32') || (navigator.platform == 'Windows');if (isWindows) { $('#sheetParent').width(2000).height(2000).sheet(); $.each($('table#jS_0_0 tr'), function(i){if(i == 1){this.style.display = 'none';}}); } });<\/script>"
+                    + "<script type=\"text/javascript\"> $(function() { var isWindows = (navigator.platform == 'Win32') || (navigator.platform == 'Windows');if (isWindows) { "
+                    + "$('div#sheetParent table').find('tr').eq(0).remove(); "
+                    + "$('div#sheetParent table tr td:nth-child(1)').remove();"
+                    + "$('div#sheetParent colgroup').find('col').eq(0).remove();"
+                    + "$('#sheetParent').width(2000).height(2000).sheet(); } });<\/script>"
                     + "<meta http-equiv='Content-Type' content='text/html; charset=utf-8'><title>"
                     + title + "</title>" + htmltext + "<!--WizHtmlContentEnd--></body></html>";
-
-           // can not add  $('#sheetParent').getSheet().toggleFullScreen(); to make sheet full screen.
 
             var location = "/My Sheets/";
             //
@@ -105,17 +89,18 @@
                 objDoc.Type = "wiz_sheet";
                 objDoc.SetTagsText2(document.title, "");
             }
+
             //
             if (objDoc.Location != location) {
                 objDoc.MoveTo(objFolder);
             }
             objDoc.ChangeTitleAndFileName(title);
             objDoc.UpdateDocument3(htmltext, 0x0002);
-            //
+
             var params = "/DatabasePath=" + objDatabase.DatabasePath + " /KbGUID=" + objDatabase.KbGUID + " /DocumentGUID=" + objDoc.GUID;
             objApp.Window.ExecCommand("locatedocument", params);
         }
-        //
+
         var donotSave = false;
         //
         function onPluginWindowClosing() {
